# benchmarks

./: CMakeLists.txt  README.md  benchmark.json  run_benchmarks.sh
include/capnp/: capnp_service.capnp.h
include/grpc/: grpc_service.grpc.pb.h  grpc_service.pb.h
include/thrift/: ThriftServiceBenchmark.h  fixture.h  thrift_service_constants.h  thrift_service_types.h
src/: benchmark.cc
src/capnp/: capnp_service.capnp.c++
src/grpc/: grpc_service.grpc.pb.cc  grpc_service.pb.cc
src/thrift/: ThriftServiceBenchmark.cpp  ThriftServiceBenchmark_server.skeleton.cpp  thrift_service_constants.cpp  thrift_service_types.cpp
